<resources>
    <string name="app_name">계좌번호 메모장</string>
    <string name="bank_symbol">bank Symbol</string>
    <string name="ba_nickname">계좌 별칭</string>
    <string name="account_holder">예금주</string>
    <string name="bank">은행</string>
    <string name="account_number">계좌번호</string>
    <string name="copy_btn_description">copy</string>
    <string name="share_btn_description">share</string>
    <string name="select_bank">은행 선택</string>
    <string name="save_btn">저장</string>
</resources>